[package]
name = "world-generator"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.14.0"
dashmap = "5.4.0"
futures-lite = "1.12.0"
noise = { version = "0.8.2", features = ["images"] }
bevy_egui = "0.17"
anyhow = { version = "1.0.68", features = ["backtrace"] }
egui_node_graph = { version = "0.4.0", features = ["persistence"] }
strum = { version = "0.24.1", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
bevy_asset_loader = { version = "0.14.1", features = ["bevy_common_assets", "serde"] }
bevy_common_assets = { version = "0.4.0", features = ["json"] }
